Edit archive urls for readability

--- a/client/src/app/core/shared/top-two-liked/top-two-liked.component.html
+++ b/client/src/app/core/shared/top-two-liked/top-two-liked.component.html
@@ -1,4 +1,4 @@
-<h3>Top 2 liked posts</h3>
+<h3>Top two the most liked posts</h3>
 <hr />
 <div class="row mb-2 flex">
   <div class="col-xl-6 col-12 inner-content side-padding" *ngFor="let post of posts">
